--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -38,6 +38,7 @@ jobs:
 
   build:
     name: Build
+    if: github.event_name == 'pull_request' && github.base_ref == 'main'
     needs: validate
     runs-on: ubuntu-latest
     strategy:
